manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-flask
  labels:
    app: python-flask
spec:
  replicas: 4
  selector:
    matchLabels:
      app: python-flask
  template:
    metadata:
      labels:
        app: python-flask
    spec:
      containers:
      - name: python-flask 
        image: python-flask:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
