manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-flask-service
spec:
  selector:
    app: python-flask
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 5000
  type: NodePort
